--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -6,6 +6,7 @@
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow-x: hidden;
+  overflow: hidden;
 }
 p {
   font-size: 20px;
